    * 0743 mem, fortigate_memory, solaris_mem: display total SWAP info in check output
    * 0740 FIX: winperf_if: now able to handle bandwidth > 4GBit...

    Multisite:
    * 0765 NagVis-Maps-Snapin: Now visualizes downtime / acknowledgment states of maps...
    * 0766 FIX: Changed transid implemtation to work as CSRF protection (Fixes CVE-2014-2330)...

    BI:
    * 0741 FIX: BI editor: fixed display bug in "Create nodes based on a service search"...

    Livestatus:
    * 0742 FIX: table statehist: now able to cancel a running query if limit is reached...


1.2.5i1:
    Core & Setup:
    * 0386 Added all active checks to check_mk -L output...
    * 0452 Speedup generation of configuration...
    * 0124 Support multiline plugin output for Check_MK Checks...
    * 0675 Activate inline SNMP per default (if available)...
    * 0695 Remove obsolete option -u, --cleanup-autochecks...
            NOTE: Please refer to the migration notes!
    * 0087 FIX: Fixed possible locking issue when using datasource program with long output...
    * 0313 FIX: Avoid duplicate reading of configuration file on --create-rrd...
    * 0379 FIX: check_mk -c: Now also rewrites the location of conf.d directory
    * 0354 FIX: Catch exception when check plugins do not return a state...
    * 0398 FIX: Tolerate debug output in check plugins when using CMC...
    * 0314 FIX: Fix CMC not executing any Check_MK checks after config reload...
    * 0401 FIX: Fix rule precedence in WATO-configured manual checks...
    * 0402 FIX: Fix exception in case of missing agent sections of cluster-aware checks...
    * 0426 FIX: Fixed processing of cached agent plugins / local scripts...
    * 0451 FIX: Ignore missing check types when creating configuration for Nagios
    * 0259 FIX: Fixed htpasswd permission problem in check_mk standalone installation...
    * 0453 FIX: Fix ugly Python exception in host diagnosis page in case of SNMP error...