@@ -13,6 +13,9 @@
     * 0765 NagVis-Maps-Snapin: Now visualizes downtime / acknowledgment states of maps...
     * 0766 FIX: Changed transid implemtation to work as CSRF protection (Fixes CVE-2014-2330)...
 
+    WATO:
+    * 0767 FIX: Signing and verification of WATO snapshot (addresses CVE-2014-2330)...
+
     BI:
     * 0741 FIX: BI editor: fixed display bug in "Create nodes based on a service search"...
 
